Refined HTO, and add description

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 /DataFrame2RDF/
 /reuse ontologies/
 /source_dataframes/
+/abstract-en.html
+/description-en.html
+/introduction-en.html
 widoco-1.4.20-jar-with-dependencies_JDK-17.jar
